--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <body>
 
         <h1>Odin Recipes</h1>
-
+        
+        <ul>
+            <li><a href="recipes/omurice.html">Omurice</a></li>
+        </ul>
+        
     </body>
 
 </html>
