--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         
         <ul>
             <li><a href="recipes/omurice.html">Omurice</a></li>
+            <li><a href="recipes/fried-egg-rice.html">Fried Egg Rice</a></li>
         </ul>
         
     </body>
