Change index title
Changed from "Odin Recipes" to "Japanese Recipes"

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Japanese Recipes</title>
     </head>
 
     <body>
 
-        <h1>Odin Recipes</h1>
+        <h1>Japanese Recipes</h1>
         
         <ul>
             <li><a href="recipes/omurice.html">Omurice</a></li>
