--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
         <h1>Japanese Recipes</h1>
         
+        <img src="https://a-z-animals.com/media/2022/11/featured-image-1024x512.jpg" alt="Japanese Flag" width="600">
+
         <ul>
             <li><a href="recipes/omurice.html">Omurice</a></li>
             <li><a href="recipes/fried-egg-rice.html">Fried Egg Rice</a></li>
