Add Css changes to project

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 
     <head>
         <meta charset="utf-8">
+        <link href="styles.css">
         <title>Japanese Recipes</title>
     </head>
 
     <body>
 
-        <h1>Japanese Recipes</h1>
+        <h1 id="main-title">Japanese Recipes</h1>
         
         <img src="https://a-z-animals.com/media/2022/11/featured-image-1024x512.jpg" alt="Japanese Flag" width="600">
 
