Add styles to all html pages and fix a little bug
The Bug: didn't add rel="stylesheet" into the link attribute

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <meta charset="utf-8">
-        <link href="styles.css">
+        <link rel="stylesheet" href="styles.css">
         <title>Japanese Recipes</title>
     </head>
 
@@ -12,9 +12,11 @@
 
         <h1 id="main-title">Japanese Recipes</h1>
         
+        <div class="imgs">
         <img src="https://a-z-animals.com/media/2022/11/featured-image-1024x512.jpg" alt="Japanese Flag" width="600">
+        </div>
 
-        <ul>
+        <ul class="list sub-heads">
             <li><a href="recipes/omurice.html">Omurice</a></li>
             <li><a href="recipes/fried-egg-rice.html">Fried Egg Rice</a></li>
         </ul>
